<resources>
    <string name="app_name">Autyzm</string>
    <string name="title_activity_main">Start</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_run_lesson">Uruchom lekcję</string>
    <string name="nav_lessons">Lekcje</string>
    <string name="nav_children">Dzieci</string>
    <string name="nav_media">Multimedia</string>
    <string name="nav_user">Użytkownik</string>
    <string name="nav_help">Pomoc</string>
    <string name="nav_logout">Wyloguj</string>
    <string name="nav_start">Start</string>
    <string name="start_last_used">Ostatnio używane</string>
    <string name="start_favourites">Ulubione</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="dzieci_details_imie">Imię</string>
    <string name="dzieci_details_nazwisko">Nazwisko</string>
    <string name="dzieci_details_data_urodzenia">Data urodzenia</string>
    <string name="dzieci_details_rozpoczecie">Rozpoczęcie nauki</string>
    <string name="dzieci_details_notatki">Notatki</string>
    <string name="dzieci_details_dane_rodzicow">Dane kontaktowe rodziców</string>
    <string name="dzieci_details_imie_ojca">Imię ojca</string>
    <string name="dzieci_details_nazwisko_ojca">Nazwisko ojca</string>
    <string name="dzieci_details_telefon_ojca">Telefon ojca</string>
    <string name="dzieci_details_imie_matki">Imię matki</string>
    <string name="dzieci_details_telefon_matki">Telefon matki</string>
    <string name="dzieci_details_nazwisko_matki">Nazwisko matki</string>
    <string name="dzieci_details_button_statystyki">Statystyki</string>
    <string name="button_zapisz">Zapisz</string>
    <string name="message_dziecko_edytowane">Dziecko poprawnie edytowane</string>
    <string name="message_dziecko_dodane">Dziecko poprawnie dodane</string>
    <string name="dziecko_dodaj_title">Dodaj dziecko</string>
    <string name="message_dziecko_do_usunięcia">Chcesz usunąć</string>
    <string name="message_dziecko_usunięte">Dziecko poprawnie usunięte</string>
    <string name="dziecko_statistics_postepy">Postępy dziecka</string>
    <string name="dzieci_statistics_postep_w_nauce">Postęp w nauce</string>
    <string name="dzieci_statistics_liczba_punktow">Liczba punktów</string>
    <string name="dzieci_statistics_brak_lekcji">Dziecko nie przeszło jeszcze żadnej lekcji</string>
    <string name="login_zaloguj">Zaloguj</string>
    <string name="login_login">Login</string>
    <string name="login_haslo">Hasło</string>
    <string name="login_error">Błędne dane logowania</string>
    <string name="dzieci_details_wybierz_zdjecie">Wybierz zdjęcie</string>
    <string name="media_foldery">Foldery</string>
    <string name="media_pliki">Pliki</string>
    <string name="dzieci_title">Dzieci</string>
    <string name="multimedia_title">Multimedia</string>
    <string name="multi_fab_folder">Folder</string>
    <string name="multi_fab_plik">Plik</string>
    <string name="multi_nowy_folder">Nowy folder</string>
    <string name="button_ok">OK</string>
    <string name="button_anuluj">Anuluj</string>
    <string name="muti_nowy_folder_placeholder">Podaj nazwę nowego folderu</string>
    <string name="login_nowe_konto"><u>Załóż nowe konto</u></string>
    <string name="userDetails_title">Dane użytkownika</string>
    <string name="user_details_imie">Imię</string>
    <string name="user_details_nazwisko">Nazwisko</string>
    <string name="user_details_login">Login</string>
    <string name="user_details_haslo">Hasło</string>
    <string name="user_details_hint"><i>Wypełnij tylko jeśli chcesz zmienić</i></string>
    <string name="validate_error_notNull">Pole nie może być puste.</string>
    <string name="validate_error_existsInDB">Istnieje już taki wpis.</string>
    <string name="validate_error_existsInDB_plik">Istnieje już taki plik w bibliotece</string>
    <string name="validate_error_allOdpowiedziSelected">Nie zostały wybrane odpowiedzi na wszystkie pytania.</string>
    <string name="help_text">W razie problemów z aplikacją,\n
        skontaktuj się z:\n
        ADMINISTRATORAMI:\n
        \n
        Tel.: 0 700 888 888\n
        michal.osik@gmail.com\n
        \n
        Tel.: 0 700 888 888\n
        izabela.konarzewska@gmail.com\n
        \n
        Tel.: 0 700 000 000\n
        klaudia.kucharuk@gmail.com
    </string>
    <string name="help_title">Pomoc</string>
    <string name="dzieci_statistics_pdf_title">Raport </string>
    <string name="dzieci_statistics_pdf_save_ok">"Plik został zachowany w dokumentach jako: "</string>
    <string name="dzieci_statistics_pdf_save_error">Nie udało się zapisać pliku</string>
    <string name="dzieci_statistics_popup_title">Zapisywanie pliku</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lekcje_main_header">Wybierz lekcję do edycji\nlub stwórz nową</string>
    <string name="lekcje_title">Lekcje</string>
    <string name="message_lekcja_usunięta">Lekcja usunięta</string>
    <string name="popup_uwaga">Uwaga!</string>
    <string name="lekcje_title_header">1. Wpisz tytuł lekcji</string>
    <string name="lekcja_hint_tytul">Tytuł lekcji</string>
    <string name="button_next">Dalej</string>
    <string name="lekcje_module_header">2. Dodaj moduł</string>
    <string name="lekcje_module_button_addModule">Dodaj moduł</string>
    <string name="lekcje_moduly_title">"Lekcja: "</string>
    <string name="lekcje_modul_noModules">Nie dodałeś jeszcze żadnego modułu</string>
    <string name="lekcje_modul_noLessons">Nie dodałeś jeszcze żadnej lekcji</string>
    <string name="lekcje_modul_plik_title">1. Dodaj plik</string>
    <string name="button_add">Dodaj</string>
    <string name="button_edit">Zmień</string>
    <string name="lekcje_modul_pytania_title">2. Dodaj lub usuń pytania</string>
    <string name="lekcje_modul_pytania_subtitle">(skala: 0-odpowiedź niepoprawna do 5-odpowiedź poprawna)</string>
    <string name="lekcje_modul_pytania_hint">Tu wpisz pytanie</string>
    <string name="lekcje_modul_pytania_row_header">Pytanie</string>
    <string name="message_pytanie_do_usunięcia">Chcesz usunąć</string>
    <string name="message_modul_usunięty">Moduł usunięty</string>
    <string name="lekcje_nowy_modul_title">Nowy moduł</string>
    <string name="favourite_add">Dodaj do ulubionych</string>
    <string name="favourite_remove">Usuń z ulubionych</string>
    <string name="uruchom_title">Uruchom lekcję</string>
    <string name="edit_name">Zmień nazwę</string>
    <string name="folder_usuniety">Folder usunięty</string>
    <string name="multi_change_name_for">"Zmień nazwę folderu: "</string>
    <string name="muti_edit_folder_placeholder">Podaj nową nazwę dla folderu</string>
    <string name="filepicker_no_data">Brak plików i katalogów</string>
    <string name="app_no_calling_permission">Nie nadałeś aplikacji odpowiednich uprawnień do dzwonienia</string>
    <string name="message_photo_do_usunięcia">Chcesz usunąć zdjęcie?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="dzieci_details_dane_dziecka">Dane dziecka</string>
    <string name="dzieci_details_zmien_zdjecie">Zmień zdjęcie</string>
    <string name="dzieci_details_usun_zdjecie">Usuń zdjęcie</string>
    <string name="dzieci_details_dodaj_zdjecie">Dodaj zdjęcie</string>
    <string name="help_dane_autorow">Dane kontaktowe autorów aplikacji</string>
    <string name="help_kontakt_michal"><b>Michał Osik</b>\n
        </string>
    <string name="help_email_michal">michal.osik@gmail.com</string>
    <string name="help_kontakt_iza"><b>Izabela Konarzewska</b>\n
        </string>
    <string name="help_email_iza">izabela.konarzewska@gmail.com</string>
    <string name="help_kontakt_klaudia"><b>Klaudia Kucharuk</b>\n
        </string>
    <string name="help_email_klaudia">klaudia.kucharuk@gmail.com</string>
    <string name="user_dane_header">Dane użytkownika</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
</resources>