<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".login.UserDetailsActivity"
    tools:showIn="@layout/activity_user_details">

    <LinearLayout
        android:id="@+id/dataContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBackground"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/contact_margin_from_photo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/contact_element_space"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:tint="@color/colorPrimary" />

            <TextView
                style="@style/DzieciDetailsSubheader"
                android:text="@string/user_dane_header" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/imieLayout"
            style="@style/EditTextMaterial.EditTextDzieciDetailsLayer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/imie"
                style="@style/EditTextMaterial.EditTextDzieciDetails"
                android:capitalize="words"
                android:hint="@string/user_details_imie"
                android:inputType="textPersonName|textCapSentences" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/nazwiskoLayout"
            style="@style/EditTextMaterial.EditTextDzieciDetailsLayer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nazwisko"
                style="@style/EditTextMaterial.EditTextDzieciDetails"
                android:capitalize="words"
                android:hint="@string/user_details_nazwisko"
                android:inputType="textCapSentences" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userLayout"
            style="@style/EditTextMaterial.EditTextDzieciDetailsLayer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user"
                style="@style/EditTextMaterial.EditTextDzieciDetails"
                android:hint="@string/user_details_login" />

        </android.support.design.widget.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/hasloLayout"
                style="@style/EditTextMaterial.EditTextDzieciDetailsLayer">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/haslo"
                    style="@style/EditTextMaterial.EditTextDzieciDetails"
                    android:hint="@string/user_details_haslo"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/haslo_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextHint"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="@dimen/contact_hint_margin"
                android:layout_gravity="bottom"
                android:text="@string/user_details_hint"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/spaceFiller"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
